test/tests/InterfaceSubclassingClass.expected
InterfaceSubclassingClass.frost:5:18: error: interface 'anonymous.Intf' cannot extend class 'anonymous.NotIntf'
1 error
