test/tests/InterfaceSubclassingClass.frost
@extendable
class NotIntf {
}

interface Intf : NotIntf {
}